# Kelp-SD-SDIO-SPI

src/: CMakeLists.txt
src/include/: crc.h  my_debug.h
src/sd_driver/: sd_card.c  sd_card.h
src/sd_driver/SDIO/: sd_card_sdio.c
src/sd_driver/SPI/: sd_card_spi.c
src/src/: crc.c  my_debug.c
